@@ -43,6 +43,8 @@ Drupal 7.0, xxxx-xx-xx (development version)
 - Performance:
     * Improved performance on uncached page views by loading multiple core
       objects in a single database query.
+    * Improved performance for logged-in users by reducing queries for path
+      alias lookups.
     * Improved support for HTTP proxies (including reverse proxies), allowing
       anonymous pageviews to be served entirely from the proxy.
 - Documentation:
